# basic-study

./: .gitignore
MPI-study/demo1/: CMakeCache.txt  CMakeLists.txt  Demo  Demo.cbp  Makefile  cmake_install.cmake
MPI-study/demo1/src/: main.cpp
MPI-study/iabond-mpi_examples-1cd845723261/: .hg_archival.txt  first  first.c  first.pbs  second.pbs
MPI-study/mpi-1/: CMakeCache.txt  CMakeLists.txt  Demo  Demo.cbp  Makefile  cmake_install.cmake
MPI-study/mpi-1/src/: main.cpp
algorithm-study/: BFS&DFS.ipynb
algorithm-study/.ipynb_checkpoints/: BFS&DFS-checkpoint.ipynb
algorithm-study/al-1/: CMakeCache.txt  CMakeLists.txt  Makefile  algorithm1  algorithm1.cbp  cmake_install.cmake
algorithm-study/al-1/include/: MyStack.h  MyTree.h
algorithm-study/al-1/src/: Astar.cpp  Astar_expendedList.cpp  Astar_pq_err.cpp  LPAstar.cpp  LPAstar_err.cpp  TreeNode.cpp  TreeNode.h  main.cpp
algorithm-study/al2/: CMakeCache.txt  CMakeLists.txt  Makefile  al2  al2.cbp  cmake_install.cmake
algorithm-study/rf/: rl_Qlearing.ipynb  value_iteration.py
algorithm-study/rf/QLearning/: test.py  treasure_on_right.py
algorithm-study/rf/QLearning/maze/: run.py
algorithm-study/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.cbp
algorithm-study/test/include/: ImgModel.h
algorithm-study/test/src/: ImgModel.cpp  main.cpp
algorithm-study/test1/: CMakeLists.txt  main.cpp
cv-test/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  opencv_demo  opencv_demo.cbp
cv-test/test/src/: main.cpp
openmp-study/openmp-01/: CMakeLists.txt  main.cpp
test/cv_test/DerivedData/cv_test/: info.plist
test/cv_test/DerivedData/cv_test/Index/UniDB/cv_test.xcindex/v13/p69133/: lock.mdb
test/cv_test/cv_test/: main.cpp
test/cv_test/cv_test.xcodeproj/: project.pbxproj
test/cv_test/cv_test.xcodeproj/project.xcworkspace/xcuserdata/Tommy.xcuserdatad/: UserInterfaceState.xcuserstate
test/cv_test/cv_test.xcodeproj/xcuserdata/Tommy.xcuserdatad/xcschemes/: xcschememanagement.plist
torch-study/: model_linear.pkl  t001.ipynb  t002-stars.ipynb  t003-mnist.ipynb  t01.ipynb  t02.ipynb  t04Linear.ipynb  t05Features.ipynb  t06DataLoader.ipynb  t08Mnist_mlp.ipynb  t10ConvolutionalCoculation.ipynb  t11RNN.ipynb  t12advanceCNN.ipynb  t13RNN.ipynb
torch-study/.ipynb_checkpoints/: t003-mnist-checkpoint.ipynb  t02-checkpoint.ipynb  t04Linear-checkpoint.ipynb  t05Features-checkpoint.ipynb  t06DataLoader-checkpoint.ipynb  t08Mnist_mlp-checkpoint.ipynb  t09CNN-checkpoint.ipynb  t13RNN-checkpoint.ipynb
torch-study/data/: t07mnist.ipynb  t08CNN.ipynb
torch-study/official_demo/: Lenet.pth  model.py  predict.py  train.py
